// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct chart data object for a hyper report 1`] = `
Object {
  "datasets": Array [
    Object {
      "data": Array [
        123,
        5,
        null,
      ],
      "label": "report A",
      "yAxisID": "axis-0",
    },
    Object {
      "data": Array [
        1,
        null,
        3,
      ],
      "label": "report B",
      "yAxisID": "axis-0",
    },
  ],
  "labels": Array [
    "Flownode Foo",
    "Barrrr",
    "Flownode DAR",
  ],
}
`;

exports[`should return correct chart data object for a hyper report with correct date order 1`] = `
Object {
  "datasets": Array [
    Object {
      "data": Array [
        null,
        123,
      ],
      "label": "report A",
      "yAxisID": "axis-0",
    },
    Object {
      "data": Array [
        5,
        null,
      ],
      "label": "report B",
      "yAxisID": "axis-0",
    },
  ],
  "labels": Array [
    "Mar 2017",
    "Dec 2017",
  ],
}
`;
